adjustment of the navbar

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   </head>
   <body class="aboutbackground">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">ChezAnh</a>
+      <a class="navbar-brand" href="#">chezanh</a>
       <button
         class="navbar-toggler"
         type="button"
