reorganisation of the portfolio

--- a/about.html
+++ b/about.html
@@ -56,7 +56,9 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
+
+    <div class="hero">
+<div class="container">
       <div class="row justify-content-center">
         <div class="col">
           <h2>I am | Tôi tên là</h2>
@@ -95,5 +97,7 @@
 </div>
         </div>
     </div>
+    </div>
+    
   </body>
 </html>
