--- a/contact.html
+++ b/contact.html
@@ -56,79 +56,82 @@
         </ul>
       </div>
     </nav>
-    <div class="container mt-5">
-      <h2>Contact Us</h2>
-      <form
-        action="mailto:Thuyanh@thynh.net"
-        method="post"
-        enctype="text/plain"
-      >
-        <div class="form-group">
-          <label for="firstName">First Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="firstName"
-            name="firstName"
-            placeholder="Enter your first name"
-            required
-          />
-        </div>
+    <div class="hero">
+      <div class="container mt-5">
+        <h2>Contact Us</h2>
+        <form
+          action="mailto:Thuyanh@thynh.net"
+          method="post"
+          enctype="text/plain"
+        >
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="firstName"
+              name="firstName"
+              placeholder="Enter your first name"
+              required
+            />
+          </div>
 
-        <div class="form-group">
-          <label for="secondName">Second Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="secondName"
-            name="secondName"
-            placeholder="Enter your second name"
-            required
-          />
-        </div>
+          <div class="form-group">
+            <label for="secondName">Second Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="secondName"
+              name="secondName"
+              placeholder="Enter your second name"
+              required
+            />
+          </div>
 
-        <div class="form-group">
-          <label for="email">Email Address</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            placeholder="Enter your email"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="subject">Subject</label>
-          <input
-            type="text"
-            class="form-control"
-            id="subject"
-            name="subject"
-            placeholder="Enter the subject of your email"
-            required
-          />
-        </div>
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="subject">Subject</label>
+            <input
+              type="text"
+              class="form-control"
+              id="subject"
+              name="subject"
+              placeholder="Enter the subject of your email"
+              required
+            />
+          </div>
 
-        <div class="form-group">
-          <label for="message">Message</label>
-          <textarea
-            class="form-control"
-            id="message"
-            name="message"
-            rows="4"
-            maxlength="300"
-            placeholder="Your message (max 300 characters)"
-            required
-          ></textarea>
-          <small class="form-text text-muted">Max 300 characters.</small>
-        </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              class="form-control"
+              id="message"
+              name="message"
+              rows="4"
+              maxlength="300"
+              placeholder="Your message (max 300 characters)"
+              required
+            ></textarea>
+            <small class="form-text text-muted">Max 300 characters.</small>
+          </div>
 
-        <a href="mailto:thuyanh@thynh.net">
-          <button class="button-container">Send</button>
-        </a>
-      </form>
+          <a href="mailto:thuyanh@thynh.net">
+            <button class="button-container">Send</button>
+          </a>
+        </form>
+      </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
   </body>
