--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+      <title>Portfolio of chezanh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/portfolio.css" rel="stylesheet" type="text/css" />
-    <title>Portfolio of chezanh</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -58,18 +58,21 @@
           </li>
       </div>
     </nav>
-    <div class="container">
-      <h2>xin chào – I am</h2>
+    <div class="hero">
+ <div class="container">
+      <p>xin chào – I am</p>
       <h1>Thúy Anh Nguyễn</h1>
-      <p class="intro">a Photographer, Yogateacher, Illustrator and Frontend Developper, based in Switzerland</p>
+      <h2 class="intro">a Photographer, Yogateacher, Illustrator and Frontend Developper, based in Switzerland</h2>
       <br>
       <br>
-      <div class="button-container">
+         <div class="button-container">
 <a href="about.html">
     <button>
 Let's explore!
     </button></a>
       </div>
 
+    </div>
+   
   </body>
 </html>
