--- a/work.html
+++ b/work.html
@@ -55,7 +55,8 @@
         </ul>
       </div>
     </nav>
-    <h1>Discover my projects!</h1>
+    <div class="hero">
+ <h1>Discover my projects!</h1>
     <div class="container">
       <div class="row mb-4">
         <div class="col-12">
@@ -118,5 +119,7 @@
     <p class="text-center">© 2025 My Portfolio | All Rights Reserved</p>
   </div>
 </footer>
+    </div>
+   
   </body>
 </html>
